<?xml version="1.0"?>
<package>
  <name>apollo_robot_model</name>
  <version>0.0.0</version>
  <description>The apollo_robot_model package</description>

  <maintainer email="jbohg@tuebingen.mpg.de">Jeannette Bohg</maintainer>
  <author>Jeannette Bohg</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


</package>